# automation-toolkit

./: .bazelignore  .bazelrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .taplo.toml  .yamlfmt.yaml  .yamllint.yaml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  bazel-bin  bazel-data  bazel-out  bazel-testlogs  biome.json  pyproject.toml  requirements.txt  test.py
data/: BUILD.bazel
data/proto/: asset.proto  asset_pb2.py  asset_pb2.pyi  defs.proto  defs_pb2.py  defs_pb2.pyi  order.proto  order_pb2.py  order_pb2.pyi
jenkins/: BazelTestRunner.groovy
lib/: BUILD  BUILD.bazel
lib/config_lib/: BUILD  BUILD.bazel  config.py
lib/data_lib/: BUILD.bazel  data_funcs.py  data_models.py
lib/dbc_lib/: BUILD.bazel  database.md  dbc.py  dbc_utils.py
lib/file_lib/: BUILD.bazel  file_factory.py  json_tool.py
lib/file_libs/: BUILD.bazel  file_factory.py  json_tool.py
lib/logger_lib/: BUILD.bazel  log_formatter.py  logger.py
lib/logger_libs/: BUILD  logger.py
lib/test_lib/: BUILD  BUILD.bazel  test_fixures.py
macros/: BUILD.bazel  pytest_macros.bzl  pytest_wrapper.py
scripts/: lint_test.sh  mypy.sh
src/cars/: BUILD  BUILD.bazel  main.py  utils.py  utils.pyi
src/config/: BUILD.bazel  config.py  config.pyi
src/dbc/: BUILD.bazel  utils.pyi
src/file_factory/: BUILD.bazel  file_factory.py  file_factory.pyi  file_factory_test.py
src/json_lib/: BUILD
src/logger/: BUILD  log_formatter.py  logger.py
tests/: BUILD  BUILD.bazel  test_fixtures.py
tests/data/: test.db  test.sql
tests/unit/: file_factory_test.py  json_tool_test.py  logger_test.py  test_config.py  test_dbc.py  test_dbc_utils.py  test_file_factory.py  test_json_tool.py  test_logger.py
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  lint_all.sh  lint_test.sh  linters.bzl  mypy.sh
