# MODULE.bazel
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "aspect_rules_lint", version = "1.9.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# NOTE PYTHON
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(python)

# NOTE PIP REQUIREMENTS
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Modern approach: Expose ruff binary via whl_mods
# Source: https://rules-python.readthedocs.io/en/latest/howto/pypi-headers.html
pip.whl_mods(
    additive_build_content = """
exports_files(["bin/ruff"])
    """,
    hub_name = "whl_mods_hub",
    whl_name = "ruff",
)
use_repo(pip, "whl_mods_hub")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
    whl_modifications = {
        "@whl_mods_hub//:ruff.json": "ruff",
    },
)
use_repo(pip, "my_deps")

# Make ruff binary available
use_repo(pip, "my_deps_312_ruff")
