load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "proto_files",
    srcs = glob(
        include = [
            "proto/*.proto",
        ],
    ),
)

filegroup(
    name = "generated_pyi_files",
    srcs = glob(
        include = [
            "proto/*_pb2.pyi",
        ],
        allow_empty = True,
    ),
)

py_library(
    name = "py_proto_lib",
    srcs = glob(
        include = [
            "proto/*_pb2.py",
        ],
        allow_empty = True,
    ),
    data = [
        ":generated_pyi_files",
    ],
)

proto_library(
    name = "proto_lib",
    srcs = [":proto_files"],
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

py_proto_library(
    name = "proto_py_pb2",
    deps = [
        ":proto_lib",
    ],
)

# py_grpc_library(
#     name = "proto_py_grpc",
#     srcs = [
#         ":proto_lib",
#     ],
#     grpc_library = "//:core_deps",
#     deps = [
#         ":proto_py_pb2",
#     ],
# )
