load("//macros:pytest_macros.bzl", "custom_py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "unittest_files",
    srcs = glob(
        include = [
            "unit/*_test.py",
            "unit/test_*.py",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "non_unittest_files",
    srcs = glob(
        include = [
            "**/*_test.py",
            "**/test_*.py",
        ],
        allow_empty = True,
        exclude = ["unit/**"],
    ),
)

filegroup(
    name = "test_data",
    srcs = glob(
        include = [
            "data/**",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "test_files",
    srcs = [
        ":non_unittest_files",
        ":test_data",
        ":unittest_files",
    ],
)

custom_py_test(
    name = "unit_tests",
    srcs = [
        ":unittest_files",
        "//lib:libs",
    ],
    data = [":test_data"],
    tags = ["unit"],
    deps = ["//:misc_deps"],
)
