load("@rules_python//python:defs.bzl", "py_library")
load("//macros:pytest_macros.bzl", "custom_py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "lib_test_fixtures",
    srcs = [
        "test_fixtures.py",
        "//lib:libs",
    ],
    deps = [
        "//:py_test_deps",
    ],
)

filegroup(
    name = "unittest_files",
    srcs = glob(
        include = [
            "unit/*_test.py",
            "unit/test_*.py",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "test_data",
    srcs = glob(
        include = [
            "data/**",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "test_files",
    srcs = [
        ":test_data",
        ":unittest_files",
    ],
)

custom_py_test(
    name = "unit_tests",
    srcs = [
        ":unittest_files",
    ],
    data = [
        ":test_data",
    ],
    tags = ["unit"],
    deps = [
        ":lib_test_fixtures",
    ],
)
