load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "data_lib",
    srcs = glob(
        include = ["**/*.py"],
        allow_empty = True,
        exclude = ["main.py"],
    ),
    deps = [
        "//:core_deps",
        "//data:proto_py_pb2",
        "//data:py_proto_lib",
    ],
)
