load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "cars_lib",
    srcs = glob(
        include = ["*.py"],
        exclude = [
            "*_test.py",
            "main.py",
        ],
    ),
    data = glob(
        ["*.pyi"],
    ),
    deps = [],
)

py_binary(
    name = "cars_app",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":cars_lib",
        "@my_deps//mypy",
        "@my_deps//pandas",
        "@my_deps//pydantic",
        "@my_deps//pylint",
        "@my_deps//python_dateutil",
        "@my_deps//pytz",
        "@my_deps//requests",
    ],
)
