load("@rules_python//python:defs.bzl", "py_library")
load("//macros:pytest_macros.bzl", "custom_py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "file_lib",
    srcs = glob(
        include = ["*.py"],
        exclude = [
            "*_test.py",
        ],
    ),
    data = glob(
        ["*.pyi"],
    ),
    deps = [],
)

custom_py_test(
    name = "file_tests",
    srcs = glob(
        ["*_test.py"],
    ),
    deps = [
        ":file_lib",
        "//:py_test_deps",
    ],
)
