load("@rules_python//python:defs.bzl", "py_library")
load("//macros:pytest_macros.bzl", "custom_py_test")
load("//tools/lint:linters.bzl", "ruff_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "file_lib",
    srcs = glob(
        include = ["*.py"],
        exclude = [
            "*_test.py",
            "main.py",
        ],
    ),
    deps = [
        "//:misc_deps",
    ],
)

custom_py_test(
    name = "file_tests",
    srcs = glob(
        ["*_test.py"],
    ),
    deps = [
        ":file_lib",
        "//:py_test_deps",
    ],
)

ruff_test(
    name = "lint",
    srcs = [
        ":file_lib",
        ":file_tests",
    ],
)
