load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

package(default_visibility = ["//visibility:public"])

format_multirun(
    name = "format",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "ci",
        "--colors=off",
        "--verbose",
        "--log-level=info",
    ],
    javascript_fix_args = [
        "format",
        "--write",
        "--colors=off",
        "--verbose",
        "--log-level=info",
    ],
    python = "//:ruff_bin",
    python_check_args = [
        "format",
        "--preview",
        "--diff",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    python_fix_args = [
        "format",
        "--preview",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "@buildifier_prebuilt//:buildifier",
    starlark_check_args = [
        "--mode=diff",
        "--lint=warn",
        "--type=auto",
        "-v",
    ],
    starlark_fix_args = [
        "--mode=fix",
        "--lint=fix",
        "--type=auto",
        "-v",
    ],
    toml = "//:taplo_bin",
    toml_check_args = [
        "format",
        "--check",
        "--diff",
        "--verbose",
    ],
    toml_fix_args = [
        "format",
        "--diff",
        "--verbose",
    ],
    yaml = "//:yamlfmt_bin",
    yaml_check_args = [
        "-lint",
        "-verbose",
        "-gitignore_excludes",
    ],
    yaml_fix_args = [
        "-verbose",
        "-gitignore_excludes",
    ],
)

format_test(
    name = "format_test",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "ci",
        "--colors=off",
        "--verbose",
        "--log-level=info",
    ],
    no_sandbox = True,
    python = "//:ruff_bin",
    python_check_args = [
        "format",
        "--preview",
        "--diff",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "@buildifier_prebuilt//:buildifier",
    starlark_check_args = [
        "--mode=diff",
        "--lint=warn",
        "--type=auto",
        "-v",
    ],
    toml = "//:taplo_bin",
    toml_check_args = [
        "format",
        "--check",
        "--diff",
        "--verbose",
    ],
    workspace = "//:MODULE.bazel",
    yaml = "//:yamlfmt_bin",
    yaml_check_args = [
        "-lint",
        "-verbose",
        "-gitignore_excludes",
    ],
)
