load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

package(default_visibility = ["//visibility:public"])

format_multirun(
    name = "fix",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "check",
        "--write",
        "--unsafe",
        "--colors=off",
    ],
    javascript_fix_args = [
        "check",
        "--write",
        "--unsafe",
        "--colors=off",
    ],
    python = "//:ruff_bin",
    python_check_args = [
        "check",
        "--fix",
        "--show-fixes",
        "--preview",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    python_fix_args = [
        "check",
        "--fix",
        "--show-fixes",
        "--preview",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "//:buildiier_bin",
    starlark_check_args = [
        "--mode=fix",
        "--lint=fix",
        "-v",
    ],
    starlark_fix_args = [
        "--mode=fix",
        "--lint=fix",
        "-v",
    ],

    # NOTE: doesn't change anything. Only reporting
    toml = "//:taplo_bin",
    toml_check_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    toml_fix_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    yaml = "//:yamllint",
    yaml_check_args = [
        "--strict",
        "--format=github",
    ],
    yaml_fix_args = [
        "--strict",
        "--format=github",
    ],
    ##########################################
)

format_multirun(
    name = "check",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "ci",
        "--colors=off",
        "--linter-enabled=true",
        "--formatter-enabled=true",
        "--assist-enabled=false",
    ],
    javascript_fix_args = [
        "ci",
        "--colors=off",
        "--linter-enabled=true",
        "--formatter-enabled=true",
        "--assist-enabled=false",
    ],
    python = "//:ruff_bin",
    python_check_args = [
        "check",
        "--preview",
        "--no-fix",
        "--diff",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    python_fix_args = [
        "check",
        "--preview",
        "--no-fix",
        "--diff",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "//:buildiier_bin",
    starlark_check_args = [
        "--mode=check",
        "--lint=warn",
        "-v",
    ],
    starlark_fix_args = [
        "--mode=check",
        "--lint=warn",
        "-v",
    ],

    # NOTE: doesn't change anything. Only reporting
    toml = "//:taplo_bin",
    toml_check_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    toml_fix_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    yaml = "//:yamllint",
    yaml_check_args = [
        "--strict",
        "--format=github",
    ],
    yaml_fix_args = [
        "--strict",
        "--format=github",
    ],
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/**",
        "bazel*/**",
        ".venv/**",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "buildifier.check",
    diff_command = "diff -u",
    mode = "diff",
    no_sandbox = True,
    workspace = "//:MODULE.bazel",
)
