load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

format_multirun(
    name = "fix",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "check",
        "--write",
        "--unsafe",
        "--colors=off",
    ],
    javascript_fix_args = [
        "check",
        "--write",
        "--unsafe",
        "--colors=off",
    ],
    python = "//:ruff_bin",
    python_check_args = [
        "check",
        "--fix",
        "--show-fixes",
        "--preview",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    python_fix_args = [
        "check",
        "--fix",
        "--show-fixes",
        "--preview",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "//:buildiier_bin",
    starlark_check_args = [
        "--mode=fix",
        "--lint=fix",
        "-v",
    ],
    starlark_fix_args = [
        "--mode=fix",
        "--lint=fix",
        "-v",
    ],

    # NOTE: doesn't change anything. Only reporting
    toml = "//:taplo_bin",
    toml_check_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    toml_fix_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    yaml = "//:yamllint",
    yaml_check_args = [
        "--strict",
        "--format=github",
    ],
    yaml_fix_args = [
        "--strict",
        "--format=github",
    ],
    ##########################################
)

format_multirun(
    name = "check",
    javascript = "//:biome_bin",
    javascript_check_args = [
        "ci",
        "--colors=off",
        "--linter-enabled=true",
        "--formatter-enabled=true",
        "--assist-enabled=false",
    ],
    javascript_fix_args = [
        "ci",
        "--colors=off",
        "--linter-enabled=true",
        "--formatter-enabled=true",
        "--assist-enabled=false",
    ],
    python = "//:ruff_bin",
    python_check_args = [
        "check",
        "--preview",
        "--no-fix",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    python_fix_args = [
        "check",
        "--preview",
        "--no-fix",
        "--respect-gitignore",
        "--force-exclude",
        "--verbose",
    ],
    starlark = "//:buildiier_bin",
    starlark_check_args = [
        "--mode=check",
        "--lint=warn",
        "-v",
    ],
    starlark_fix_args = [
        "--mode=check",
        "--lint=warn",
        "-v",
    ],

    # NOTE: doesn't change anything. Only reporting
    toml = "//:taplo_bin",
    toml_check_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    toml_fix_args = [
        "lint",
        "--verbose",
        "--default-schema-catalogs",
    ],
    yaml = "//:yamllint",
    yaml_check_args = [
        "--strict",
        "--format=github",
    ],
    yaml_fix_args = [
        "--strict",
        "--format=github",
    ],
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/**",
        "bazel*/**",
        ".venv/**",
        "*cache*/**",
        ".*cache*/**",
    ],
    lint_mode = "fix",
    mode = "fix",
)

sh_binary(
    name = "check_all",
    srcs = ["//:scripts/lint_all.sh"],
    data = [
        "//:check",
        "//:format.check",
        "//:pylint",
    ],
)

buildifier_test(
    name = "buildifier.check",
    diff_command = "diff -u",
    mode = "diff",
    no_sandbox = True,
    workspace = "//:MODULE.bazel",
)

sh_test(
    name = "lint_test",
    srcs = ["//:scripts/lint_test.sh"],
    data = [
        "//:all_files",
        "//:biome_bin",
        "//:buildiier_bin",
        "//:pylint",
        "//:ruff_bin",
        "//:taplo_bin",
        "//:yamllint",
        "//lib:libs",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

test_suite(
    name = "all_linters",
    tests = [
        ":buildifier.check",
        ":lint_test",
    ],
)
